# Noggin

./: QUESTION_FORMAT.md  README.md  index.html  package-lock.json  package.json  sample-import.csv
.claude/: launch.json
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: cards.rs  db.rs  error.rs  index.rs  lib.rs  main.rs  print.rs  vault.rs  watcher.rs
src/components/: CommandPalette.tsx  ConfirmDialog.tsx  FileLibrary.tsx  FilterPanel.tsx  ImportView.tsx  Markdown.tsx  NotesView.tsx  PromptDialog.tsx  QuestionEditor.tsx  QuestionsView.tsx  QuickSearch.tsx  QuizView.tsx  ReviewSetup.tsx  ReviewView.tsx  SettingsView.tsx  Shell.tsx  VaultPicker.tsx  icons.tsx
src/components/fields/: DifficultyPicker.tsx  ImageDrop.tsx  MarkdownField.tsx  SubjectSelect.tsx  TagInput.tsx
src/components/ui/: Button.tsx  Callout.tsx  EmptyState.tsx  Field.tsx  FolderTree.tsx  Modal.tsx  Segmented.tsx  chips.tsx
src/domain/: format.test.ts  format.ts  ids.ts  registries.ts  settings.test.ts  settings.ts  srs.test.ts  srs.ts  title.test.ts  title.ts  types.ts
src/lib/: commands.ts  folderTree.test.ts  folderTree.ts  images.test.ts  images.ts  import.test.ts  import.ts  ipc.ts  theme.ts  useAsync.ts  watch.ts
src/state/: questions.ts  settings.test.ts  settings.ts  ui.ts  vault.ts
